# beicode

./: CMakeLists.txt
include/: beicode.h
package/: vcpkg.json
